# Homework_8_1

./: README.md  main.py  pyproject.toml
src/: seeds.py
